# MIPI_Advanced_C

./: .gitignore  Build.sh  CMakeLists.txt  Clean.sh  ReBuild.sh  ReadMe.md  Run.sh
apps/Test_A/A00/: CMakeLists.txt  main.c
apps/Test_A/A01/: CMakeLists.txt  main.c
apps/Test_A/A02/: CMakeLists.txt  main.c
apps/Test_A/A03/: CMakeLists.txt  main.c
apps/Test_A/A04/: CMakeLists.txt  main.c
apps/Test_A/A05/: CMakeLists.txt  main.c
apps/Test_A/A06/: CMakeLists.txt  main.c
apps/Test_A/A07/: CMakeLists.txt  main.c
apps/Test_A/A08/: CMakeLists.txt  main.c
apps/Test_A/A09/: CMakeLists.txt  main.c
apps/Test_A/A10/: CMakeLists.txt  main.c
apps/Test_B/B00/: CMakeLists.txt  findMaxBlock.c  findMaxBlock.h  main.c
apps/Test_B/B01/: CMakeLists.txt  main.c
apps/Test_C/C00/: CMakeLists.txt  main.c
apps/Test_C/C01/: CMakeLists.txt  main.c
apps/Test_C/C02/: CMakeLists.txt  main.c
apps/snake/: CMakeLists.txt
apps/snake/inc/: game_logic.h  game_types.h  graphics.h  main.h  menu_logic.h  sound.h
apps/snake/src/: game_logic.c  graphics.c  main.c  menu_logic.c  sound.c
